# fluxdown

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: build.yml
apps/desktop/: README.md  README.zh-CN.md  index.html  package.json
apps/desktop/src/: App.css  App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: README.md  README.zh-CN.md  pubspec.yaml
apps/mobile/android/: key.properties.example
apps/mobile/android/app/: build.gradle.kts
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/mobile/integration_test/: protocol_e2e_test.dart
apps/mobile/ios/: ExportOptions.ci.plist
apps/mobile/ios/Runner/: AppDelegate.swift  Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/lib/src/: download_controller.dart  download_task.dart  hls_ts_remuxer.dart  mobile_downloader.dart  mobile_ed2k.dart  mobile_ftp.dart  mobile_sftp.dart  mobile_smb.dart  mobile_torrent.dart  protocol.dart  protocol_e2e_runner.dart  task_store.dart  transfer_metrics.dart
apps/mobile/test/: widget_test.dart
crates/fluxdown-cli/: Cargo.toml
crates/fluxdown-cli/src/: main.rs
crates/fluxdown-cli/tests/: download_command.rs
crates/fluxdown-core/: Cargo.toml
crates/fluxdown-core/src/: downloader.rs  lib.rs  protocol.rs  runner.rs  store.rs  task.rs
docs/: README.md  android-real-device-protocol-report.md  apple-verification.md  architecture.md  build-release.md  business.md  download-verification.md  operations-security.md  protocol-e2e-test-cases.md  protocol-e2e-windows-desktop-gui-report-20260630.md  protocol-e2e-windows-report-20260630.md  protocols.md  requirements.md  roadmap.md  third-party-licenses.md
docs/artifacts/: windows-cli-protocol-e2e-20260630.json  windows-desktop-gui-protocol-e2e-20260630.json
prototype/: desktop-redesign.html  mobile-redesign.html
scripts/: audit-release-readiness.mjs  build-ios-ipa-local.sh  build-linux-gui-docker.sh  build-windows-cli-docker.sh  build-windows-gui-docker.sh  clean-tauri-temp.mjs  create-macos-dmg.mjs  prepare-github-release-assets.mjs  range-http-server.py  release-manifest.mjs  stage-release.mjs  tauri-build.mjs  verify-apple-current.sh  verify-apple-runtime.sh  verify-apple.sh  verify-artifacts.mjs  verify-ios-device-readiness.mjs  verify-ios-integration.sh  verify-ios-physical-integration.sh  verify-ios-signing-readiness.mjs  verify-ios.sh  verify-licenses.mjs  verify-macos-artifacts.mjs  verify-macos-cli-ftp-ftps.sh  verify-macos-cli-http-hls.sh  verify-macos-cli-p2p.sh  verify-macos-cli-queue-controls.sh  verify-macos-cli-release.sh  verify-macos-cli-sftp.sh  verify-macos-cli-smb.sh  verify-macos-desktop-command.sh  verify-macos-desktop-ftps.sh  verify-macos-desktop-p2p.sh  verify-macos-desktop-sftp.sh  verify-macos-desktop-smb.sh  verify-macos.sh  verify-mobile-url-schemes.mjs  verify-windows-cli-protocols.py  verify-windows-desktop-gui-protocols.py
(+3 files in other folders)
