[workspace]
members = [
    "crates/fluxdown-core",
    "crates/fluxdown-cli",
    "apps/desktop/src-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "1.0.4"

[workspace.dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
librqbit = { version = "8.1.1", default-features = false, features = ["rust-tls"] }
m3u8-rs = "6.0.0"
open = "5.3.5"
percent-encoding = "2.3.2"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
smb2 = "0.11.2"
ssh2 = "0.9.5"
suppaftp = { version = "8.0.3", features = ["tokio", "tokio-rustls-ring", "deprecated"] }
tauri = { version = "2.9.5", features = [] }
tauri-build = "2.5.3"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
webpki-roots = "1.0.7"
tempfile = "3.23.0"
