[package]
name = "fluxdown-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fluxdown"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fluxdown-core = { path = "../fluxdown-core" }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
