[package]
name = "fluxdown-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes.workspace = true
anyhow.workspace = true
cbc.workspace = true
futures-util.workspace = true
librqbit.workspace = true
m3u8-rs.workspace = true
open.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
smb2.workspace = true
ssh2.workspace = true
suppaftp.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["process", "sync", "time"] }
url.workspace = true
uuid.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
