[package]
name = "fluxdown-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
fluxdown-core = { path = "../../../crates/fluxdown-core" }
serde.workspace = true
tauri.workspace = true
tokio.workspace = true
